--- a/style.css
+++ b/style.css
@@ -264,7 +264,11 @@
       animation: slideUp 0.5s ease-out;
       transition: var(--transition);
     }
-
+    .instagram {
+      background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, 
+                  #fd5949 45%, #d6249f 60%, #285AEB 90%);
+      color: white;
+    }    
     #question-container h2 {
       font-size: 1.5rem;
       margin-bottom: 1.5rem;
